# claudes-fables

./: .env.example  .gitignore  CLAUDE.md  README.md  index.html  package-lock.json  package.json  rubric.md  session-log.md  tsconfig.json  tsconfig.node.json  vercel.json  vite.config.mts  vite.config.ts
.claude/skills/character-design/: SKILL.md
.claude/skills/child-guardian/: SKILL.md
.claude/skills/fable-author/: SKILL.md
.claude/skills/storybook-art/: SKILL.md
.claude/skills/tender-ui/: SKILL.md
api/: fable.js  fable.ts  token.js
demo/: fear-of-dark.json  honesty.json  sharing.json
scripts/: build-api.mjs  gen-prompts.mjs  regen-demos.mjs  shots.mjs
src/: App.tsx  index.css  prompts.generated.ts  types.ts
src/lib/: ambient.ts  api.ts  demos.ts  narration.ts  narrator.ts
src/prompts/: character-design.md  child-guardian.md  fable-author.md  storybook-art.md  tender-ui.md
src/scene/: Scene.tsx
src/server/: fable.ts  guardian.ts  token.ts  tokenEntry.ts  validateFable.ts  vercelEntry.ts
src/ui/: GrownupAsk.tsx  Story.tsx  StudioPanel.tsx
voice-agent/: .env.example  README.md  pyproject.toml  sample_voices.py  storyteller.py
